--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "laravel-mix": "^6.0.16",
-    "postcss": "^8.1.14",
+    "postcss": "^8.2.10",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.32.11",
-    "sass-loader": "^11.0.1"
+    "sass-loader": "^11.0.1",
+    "webpack": "^5.34.0"
   }
 }
